# pomodoro

./: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTION.md  PRODUCT.md  README.md  main.c  pomodoro.ioc
Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
button/: button.c  button.h
cmake/stm32cubemx/: CMakeLists.txt
config/: config_task.c  config_task.h
display/: display.c  display.h  fonts.c  fonts.h
hal/: hal.h
osal/: osal.h
osal/freertos/: CMakeLists.txt  FreeRTOSConfig.h  osal_impl.c
platform/stm32f401/: CMakeLists.txt  hal_impl.c  platform.c  platform.h
pomodoro/: pomodoro.c  pomodoro.h
